[project]
name = "hnh"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "DONGUK777", email = "kimdongyork@gmail.com"},
    {name = "sunwoo", email = "summerham22@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "python-multipart>=0.0.10",
    "transformers>=4.45.0",
    "hnh @ file:///${PROJECT_ROOT}/",
    "tensorflow==2.16.2",
    "keras==3.0.0",
    "tf-keras>=2.16.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
pythonpath = "src"
